--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <link href="style.css" rel="stylesheet" />
     <title>MainOmnifood</title>
   </head>
@@ -20,6 +26,50 @@
           </p>
           <a href="#" class="btn btn--full">Start eating well</a>
           <a href="#" class="btn btn--outline">Learn more &dArr;</a>
+
+          <div class="delivered-meals">
+            <div class="delivered-img">
+              <img
+                src="c:\Users\Chiemela\Downloads\pexels-andrea-piacquadio-813940.jpg"
+                alt="customer photo"
+                width="120"
+                height="100"
+              />
+              <img
+                src="c:\Users\Chiemela\Downloads\pexels-pixabay-415263.jpg"
+                alt="customer photo"
+                width="120"
+                height="100"
+              />
+              <img
+                src="c:\Users\Chiemela\Downloads\pexels-pixabay-354951.jpg"
+                alt="customer photo"
+                width="120"
+                height="100"
+              />
+              <img
+                src="c:\Users\Chiemela\Downloads\pexels-fernanda-latronico-713520.jpg"
+                alt="customer photo"
+                width="120"
+                height="100"
+              />
+              <img
+                src="c:\Users\Chiemela\Downloads\pexels-reead-886285.jpg"
+                alt="customer photo"
+                width="120"
+                height="100"
+              />
+              <img
+                src="c:\Users\Chiemela\Downloads\pexels-hasibullah-zhowandai-819530.jpg"
+                alt="customer photo"
+                width="120"
+                height="100"
+              />
+            </div>
+            <p class="deliver-text">
+              <span>250,000+</span> meals delivered last year!
+            </p>
+          </div>
         </div>
         <div class="hero-img-box">
           <!--
