--- a/index.html
+++ b/index.html
@@ -101,13 +101,18 @@
         </div>
       </section>
 
-      <section class="section-how container grid grid-2-cols">
-        <div class="container grid grid-2-cols">
-          <div>Test 1</div>
-          <div>Test 2</div>
-          <div>Test 3</div>
-          <div>Test 4</div>
-        </div>
+      <section class="section-how container grid grid--2-cols">
+        <div>Test 1</div>
+        <div>Test 2</div>
+        <div>Test 3</div>
+        <div>Test 4</div>
+      </section>
+
+      <section class="section-how container grid grid--4-cols">
+        <div>Test 1</div>
+        <div>Test 2</div>
+        <div>Test 3</div>
+        <div>Test 4</div>
       </section>
     </main>
   </body>
