--- a/index.html
+++ b/index.html
@@ -101,14 +101,16 @@
         </div>
       </section>
 
-      <section class="section-how container grid grid--2-cols">
-        <div>Test 1</div>
-        <div>Test 2</div>
-        <div>Test 3</div>
-        <div>Test 4</div>
+      <section class="section-how">
+        <div class="container grid grid--2-cols">
+          <div>Test 1</div>
+          <div>Test 2</div>
+          <div>Test 3</div>
+          <div>Test 4</div>
+        </div>
       </section>
 
-      <section class="section-how container grid grid--4-cols">
+      <section class="section-how grid grid--4-cols">
         <div>Test 1</div>
         <div>Test 2</div>
         <div>Test 3</div>
