Finished up on the how it work's section in my omnifood project.

--- a/qoute.html
+++ b/qoute.html
@@ -20,7 +20,7 @@
         font-size: 62.5%;
       }
       body {
-        font-family: "Rubik", sans-serif;
+        font-family: sans-serif;
         font-weight: 400;
         line-height: 1;
         color: #343a40;
@@ -48,11 +48,28 @@
         font-size: 1.3rem;
         font-weight: 700;
       }
-      .qoute-container {
-        font-size: 1.7rem;
-        font-weight: 600;
+      .qoute-container p {
+        font-size: 2rem;
         line-height: 1.3;
         width: 45rem;
+      }
+      .qoute-img {
+        border-radius: 1rem;
+        margin-top: 1.5rem;
+        position: relative;
+      }
+      .acc-container {
+        background-color: red;
+        width: 165px;
+        border-radius: 10px;
+        position: absolute;
+        right: 585px;
+        top: 363px;
+      }
+      .quote-acc {
+        font-size: 1.4rem;
+        font-weight: 700;
+        padding: 4px;
       }
     </style>
   </head>
@@ -69,21 +86,18 @@
         <p>THEGUY-CHEMMZY</p>
       </div>
       <div class="qoute-container">
+        <p>Na ten hag and sancho case i wan go settle like this oOoO.</p>
+
         <img
-          src="c:\Users\Chiemela\Pictures\IMG_E3833.JPG"
+          src="c:\Users\Chiemela\Pictures\IMG_E3875.JPG"
           class="qoute-img"
           alt="qoute img"
           height="280"
           width="450"
         />
-        <p>
-          You fit go dey sleep kwa but trust me you will enter 2025
-          empty-handed, if you like no go hussle.
-        </p>
-        <p>
-          remember adage once said heaven "helps" those niggas wey dey help dia
-          sef.
-        </p>
+      </div>
+      <div class="acc-container">
+        <p class="quote-acc">IG.@CHEMMZY-BOY</p>
       </div>
     </div>
   </body>
