--- a/index.html
+++ b/index.html
@@ -101,12 +101,81 @@
         </div>
       </section>
 
+      <section class="section-featured">
+        <div class="container"></div>
+      </section>
+
       <section class="section-how">
-        <div class="container grid grid--2-cols">
-          <div>Test 1</div>
-          <div>Test 2</div>
-          <div>Test 3</div>
-          <div>Test 4</div>
+        <div class="container">
+          <p class="subheading">How it works</p>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
+        </div>
+
+        <div class="container grid grid-2-cols grid--center-v">
+          <!-- STEP 01-->
+          <div class="step-text-box">
+            <p class="step-number">01</p>
+            <h3 class="heading-tertiary">
+              Tell us what you like (and what not)
+            </h3>
+            <p class="step-description">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. it
+              makes sure you get all the mutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="c:\Users\Chiemela\Pictures\IMG_E3859.JPG"
+              class="step-img"
+              alt="iphone app preferrences selection screen"
+              width="450"
+              height="450"
+            />
+          </div>
+          <!-- STEP 02-->
+          <div class="step-img-box">
+            <img
+              src="c:\Users\Chiemela\Pictures\IMG_E3856.JPG"
+              class="step-img"
+              alt="iphone app meal approving plan screen"
+              width="450"
+              height="450"
+            />
+          </div>
+
+          <div class="step-text-box">
+            <p class="step-number">02</p>
+            <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+            <p class="step-description">
+              Once per week, approve the meal plangenerated for you by omnifood
+              AI. you can change ingredients, swap entire meals, or even add
+              your own reciepes.
+            </p>
+          </div>
+          <!-- STEP 03-->
+          <div class="step-text-box">
+            <p class="step-number">03</p>
+            <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+            <p class="step-description">
+              Best chefs in town will cook you selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change delivery schedules and address daily!
+            </p>
+          </div>
+
+          <div class="step-img-box">
+            <img
+              src="c:\Users\Chiemela\Pictures\IMG_E3858.JPG"
+              class="step-img"
+              alt="iphone app delivery screen"
+              width="450"
+              height="450"
+            />
+          </div>
         </div>
       </section>
     </main>
