Deleted a css code that is not important to me anymore

--- a/qoute.html
+++ b/qoute.html
@@ -58,14 +58,7 @@
         margin-top: 1.5rem;
         position: relative;
       }
-      .acc-container {
-        background-color: red;
-        width: 165px;
-        border-radius: 10px;
-        position: absolute;
-        right: 585px;
-        top: 363px;
-      }
+
       .quote-acc {
         font-size: 1.4rem;
         font-weight: 700;
@@ -86,10 +79,13 @@
         <p>THEGUY-CHEMMZY</p>
       </div>
       <div class="qoute-container">
-        <p>Na ten hag and sancho case i wan go settle like this oOoO.</p>
+        <p>
+          "no gree for anybody, no gree for anybody" but you don gree for sporty
+          today
+        </p>
 
         <img
-          src="c:\Users\Chiemela\Pictures\IMG_E3869.JPG"
+          src="c:\Users\Chiemela\Pictures\IMG_E3888.JPG"
           class="qoute-img"
           alt="qoute img"
           height="280"
