--- a/qoute.html
+++ b/qoute.html
@@ -58,7 +58,14 @@
         margin-top: 1.5rem;
         position: relative;
       }
-
+      .acc-container {
+        background-color: red;
+        width: 165px;
+        border-radius: 10px;
+        position: absolute;
+        right: 580px;
+        top: 295px;
+      }
       .quote-acc {
         font-size: 1.4rem;
         font-weight: 700;
@@ -79,16 +86,13 @@
         <p>THEGUY-CHEMMZY</p>
       </div>
       <div class="qoute-container">
-        <p>
-          "no gree for anybody, no gree for anybody" but you don gree for sporty
-          today
-        </p>
+        <p>Thinking all night.</p>
 
         <img
-          src="c:\Users\Chiemela\Pictures\IMG_E3888.JPG"
+          src="c:\Users\Chiemela\Pictures\IMG_E3885.JPG"
           class="qoute-img"
           alt="qoute img"
-          height="280"
+          height="250"
           width="450"
         />
       </div>
