Working on the meal section in my omnifood project

--- a/index.html
+++ b/index.html
@@ -207,6 +207,34 @@
           </div>
         </div>
       </section>
+
+      <section class="section-meal">
+        <div class="container">
+          <p class="subheading">MEALS</p>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ reciepes
+          </h2>
+        </div>
+
+        <div class="container grid grid--4-cols">
+          <div class="meals">
+            <img
+              src="https://img.freepik.com/premium-photo/high-angle-japanese-dumplings_398492-10705.jpg"
+              class="meal-img"
+              alt="japanese gyozas"
+            />
+            <span class="tag">vegeterian</span>
+            <p class="meal-title">Japanese gyozas</p>
+            <ul class="meals-attributes">
+              <li class="meal-attr">650 Calories</li>
+              <li class="meal-attr">NutriScore &reg; 74</li>
+              <li class="meal-attr">4.9 Ratings (706)</li>
+            </ul>
+          </div>
+          <div class="meals">meals</div>
+          <div class="meals">list of diets</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
