--- a/qoute.html
+++ b/qoute.html
@@ -60,11 +60,20 @@
       }
       .acc-container {
         background-color: red;
-        width: 165px;
+        width: 170px;
         border-radius: 10px;
         position: absolute;
-        right: 580px;
-        top: 295px;
+        right: 600px;
+        top: 343px;
+      }
+
+      .list-cont {
+        padding-bottom: 1.3rem;
+      }
+      li {
+        font-size: 1.7rem;
+        margin-left: 2rem;
+        line-height: 1.2;
       }
       .quote-acc {
         font-size: 1.4rem;
@@ -86,13 +95,16 @@
         <p>THEGUY-CHEMMZY</p>
       </div>
       <div class="qoute-container">
-        <p>Thinking all night.</p>
+        <p>
+          I don go use mistake tell my destiny helper sey i no go gree for am,
+          him come use vex pursue me comot him house.
+        </p>
 
         <img
-          src="c:\Users\Chiemela\Pictures\IMG_E3885.JPG"
+          src="c:\Users\Chiemela\Pictures\IMG_E3964.JPG"
           class="qoute-img"
           alt="qoute img"
-          height="250"
+          height="300"
           width="450"
         />
       </div>
