Created a shopping card in my omnifood project

--- a/index.html
+++ b/index.html
@@ -218,41 +218,119 @@
       </section>
 
       <section class="section-meal">
-        <div class="container">
+        <div class="container center-text">
           <p class="subheading">MEALS</p>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ reciepes
           </h2>
         </div>
 
-        <div class="container grid grid--4-cols">
+        <div class="container grid grid--3-cols margin-bottom-md">
           <div class="meals">
             <img
-              src="https://img.freepik.com/premium-photo/high-angle-japanese-dumplings_398492-10705.jpg"
+              src="https://omnifood.dev/img/meals/meal-1.jpg"
               class="meal-img"
-              alt="japanese gyozas"
+              alt="Japanese Gyozas"
             />
-            <span class="tag">vegeterian</span>
-            <p class="meal-title">Japanese gyozas</p>
-            <ul class="meals-attributes">
-              <li class="meal-attr">
-                <ion-icon name="flame-outline"></ion-icon>
-                <span>650 Calories</span>
+            <div class="meal-content">
+              <div class="meal-tag">
+                <span class="tag tag--vegetarian">vegeterian</span>
+              </div>
+              <p class="meal-title">Japanese gyozas</p>
+              <ul class="meals-attributes">
+                <li class="meal-attr">
+                  <ion-icon class="meals-icon" name="flame-outline"></ion-icon>
+                  <span><strong>650</strong> Calories</span>
+                </li>
+                <li class="meal-attr">
+                  <ion-icon
+                    class="meals-icon"
+                    name="restaurant-outline"
+                  ></ion-icon
+                  ><span>NutriScore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-attr">
+                  <ion-icon class="meals-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.9</strong> Ratings (750)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="meals">
+            <img
+              src="https://omnifood.dev/img/meals/meal-2.jpg"
+              class="meal-img"
+              alt="Avocado salad"
+            />
+            <div class="meal-content">
+              <div class="meal-tag">
+                <span class="tag tag--vegan">Vegan</span>
+                <span class="tag tag--paleo">Paleo</span>
+              </div>
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meals-attributes">
+                <li class="meal-attr">
+                  <ion-icon class="meals-icon" name="flame-outline"></ion-icon>
+                  <span><strong>400</strong> Calories</span>
+                </li>
+                <li class="meal-attr">
+                  <ion-icon
+                    class="meals-icon"
+                    name="restaurant-outline"
+                  ></ion-icon
+                  ><span>NutriScore &reg; <strong>92</strong></span>
+                </li>
+                <li class="meal-attr">
+                  <ion-icon class="meals-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.9</strong> Ratings (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="diet">
+            <h3 class="heading-tertiary">Works with any diet:</h3>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegan</span>
               </li>
-              <li class="meal-attr">
-                <ion-icon name="restaurant-outline"></ion-icon
-                ><span>NutriScore &reg; 74</span>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegeterian</span>
               </li>
-              <li class="meal-attr">
-                <span
-                  ><ion-icon name="star-outline"></ion-icon>4.9 Ratings
-                  (706)</span
-                >
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Paleo</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Kid-friendly</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Lactose-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Keto</span>
               </li>
             </ul>
           </div>
-          <div class="meals">meals</div>
-          <div class="meals">list of diets</div>
+        </div>
+        <div class="container all-recipe">
+          <a href="#" class="link">See all recipe &rarr;</a>
         </div>
       </section>
     </main>
