--- a/qoute.html
+++ b/qoute.html
@@ -40,8 +40,8 @@
         margin-bottom: 2.8rem;
       }
       .img-container img {
-        height: 5rem;
-        width: 5rem;
+        height: 7rem;
+        width: 6.7rem;
         border-radius: 50%;
       }
       .img-container p {
@@ -60,11 +60,11 @@
       }
       .acc-container {
         background-color: red;
-        width: 170px;
+        width: 15rem;
         border-radius: 10px;
         position: absolute;
         right: 600px;
-        top: 343px;
+        top: 315px;
       }
 
       .list-cont {
@@ -96,16 +96,16 @@
       </div>
       <div class="qoute-container">
         <p>
-          I don go use mistake tell my destiny helper sey i no go gree for am,
-          him come use vex pursue me comot him house.
+          You fit believe sey your babe dey sick make another man carry her go
+          night club.
         </p>
 
         <img
-          src="c:\Users\Chiemela\Pictures\IMG_E3964.JPG"
+          src="c:\Users\Chiemela\Pictures\IABEE4024 - Copy.JPG"
           class="qoute-img"
           alt="qoute img"
           height="300"
-          width="450"
+          width="420"
         />
       </div>
       <div class="acc-container">
