--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
           <div class="step-img-box">
             <img
-              src="c:\Users\Chiemela\Pictures\IMG_E3859.JPG"
+              src="https://omnifood.dev/img/app/app-screen-1.png"
               class="step-img"
               alt="iphone app preferrences selection screen"
               width="450"
@@ -177,7 +177,7 @@
           <!-- STEP 02-->
           <div class="step-img-box">
             <img
-              src="c:\Users\Chiemela\Pictures\IMG_E3856.JPG"
+              src="https://omnifood.dev/img/app/app-screen-2.png"
               class="step-img"
               alt="iphone app meal approving plan screen"
               width="450"
@@ -207,7 +207,7 @@
 
           <div class="step-img-box">
             <img
-              src="c:\Users\Chiemela\Pictures\IMG_E3858.JPG"
+              src="https://omnifood.dev/img/app/app-screen-3.png"
               class="step-img"
               alt="iphone app delivery screen"
               width="450"
@@ -333,6 +333,143 @@
           <a href="#" class="link">See all recipe &rarr;</a>
         </div>
       </section>
+      <setion class="section-testimonial">
+        <div class="testimonials-container">
+          <p class="subheading">testimonials</p>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+
+          <div class="testimonials">
+            <figure class="testimonial">
+              <img
+                src="https://omnifood.dev/img/customers/dave.jpg"
+                class="Testimonial-img"
+                alt="dave img"
+              />
+              <blockquote class="testimonial-text">
+                inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="testimonial-name">&mdash; Dave Bryson</p>
+            </figure>
+
+            <figure class="testimonial">
+              <img
+                src="https://omnifood.dev/img/customers/ben.jpg"
+                class="Testimonial-img"
+                alt="Ben Hadley img"
+              />
+              <blockquote class="testimonial-text">
+                The AI algorithm is crazy good, it chooses the right meals for
+                every time. its amazing not to worry about food anymore!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Ben Hadley</p>
+            </figure>
+
+            <figure class="testimonial">
+              <img
+                src="https://omnifood.dev/img/customers/steve.jpg"
+                class="Testimonial-img"
+                alt="steve Miller img"
+              />
+              <blockquote class="testimonial-text">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Steve Miller</p>
+            </figure>
+
+            <figure class="testimonial">
+              <img
+                src="https://omnifood.dev/img/customers/hannah.jpg"
+                class="Testimonial-img"
+                alt="hannah Smith img"
+              />
+              <blockquote class="testimonial-text">
+                I got Omniffod for the whole Family, ad it frees up to much
+                time! Plus, everything is organic and vegan and ithout plastic
+              </blockquote>
+              <p class="testimonial-name">&mdash; Hannah Smith</p>
+            </figure>
+          </div>
+        </div>
+        <div class="gallary">
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-1.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-3.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-5.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-7.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-11.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-2.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-4.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-8.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-6.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-12.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-9.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+          <figure class="gallary-item">
+            <img
+              src="https://omnifood.dev/img/gallery/gallery-10.jpg"
+              alt="Beautifully arranged samples of food"
+            />
+          </figure>
+        </div>
+      </setion>
+
+      <section class="section-pricing"></section>
     </main>
   </body>
 </html>
