Making use of video element in my html for my qoute

--- a/qoute.html
+++ b/qoute.html
@@ -54,7 +54,7 @@
         width: 45rem;
       }
       .qoute-img {
-        border-radius: 1rem;
+        border-radius: 3rem;
         margin-top: 1.5rem;
         position: relative;
       }
@@ -67,14 +67,6 @@
         top: 315px;
       }
 
-      .list-cont {
-        padding-bottom: 1.3rem;
-      }
-      li {
-        font-size: 1.7rem;
-        margin-left: 2rem;
-        line-height: 1.2;
-      }
       .quote-acc {
         font-size: 1.4rem;
         font-weight: 700;
@@ -101,7 +93,7 @@
         </p>
 
         <img
-          src="c:\Users\Chiemela\Pictures\IABEE4024 - Copy.JPG"
+          src="c:\Users\Chiemela\Pictures\KAOUE4543.JPG"
           class="qoute-img"
           alt="qoute img"
           height="300"
