--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <div class="pricing-plan">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
-              <p class="plan-price"><span>$</span>399</p>
+              <p class="plan-price"><span class="dollar">$</span>399</p>
               <p class="plan-text">Per month. that's just $11 per meal!</p>
             </header>
 
@@ -508,7 +508,7 @@
           <div class="pricing-plan">
             <header class="plan-header">
               <p class="plan-name">Completed</p>
-              <p class="plan-price"><span>$</span>649</p>
+              <p class="plan-price"><span class="dollar">$</span>649</p>
               <p class="plan-text">Per month. that's just $13 per meal!</p>
             </header>
             <ul class="list">
