added some qoute to my qoute project and also buildig on the call to action in my omnifood project

--- a/qoute.html
+++ b/qoute.html
@@ -51,10 +51,10 @@
       .qoute-container p {
         font-size: 2rem;
         line-height: 1.3;
-        width: 45rem;
+        width: 35rem;
       }
       .qoute-img {
-        border-radius: 3rem;
+        border-radius: 1rem;
         margin-top: 1.5rem;
         position: relative;
       }
@@ -63,8 +63,8 @@
         width: 15rem;
         border-radius: 10px;
         position: absolute;
-        right: 600px;
-        top: 315px;
+        right: 60%;
+        top: 60%;
       }
 
       .quote-acc {
@@ -79,7 +79,7 @@
       <div class="img-container">
         <img
           class="headshot"
-          src="c:\Users\Chiemela\Pictures\IMG_E0432.JPG"
+          src="c:\Users\Chiemela\Pictures\IMG_3956.JPG"
           alt="mr.dan headshot profile"
           width="100"
           height="130"
@@ -88,17 +88,19 @@
       </div>
       <div class="qoute-container">
         <p>
-          You fit believe sey your babe dey sick make another man carry her go
-          night club.
+          I hear sey many men heart don fry for nigeria while some dey heat like
+          Mercury
         </p>
+        <!--
 
-        <img
-          src="c:\Users\Chiemela\Pictures\KAOUE4543.JPG"
-          class="qoute-img"
-          alt="qoute img"
-          height="300"
-          width="420"
-        />
+  <img
+  src="c:\Users\Chiemela\Pictures\IMG_E4346.JPG"
+  class="qoute-img"
+  alt="qoute img"
+  height="300"
+  width="420"
+  />
+-->
       </div>
       <div class="acc-container">
         <p class="quote-acc">IG.@CHEMMZY-BOY</p>
