--- a/index.html
+++ b/index.html
@@ -577,6 +577,45 @@
           </div>
         </div>
       </section>
+
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meals is on us!
+              </p>
+
+              <form class="cta-text" action="#">
+                <label for="full-name">Full name</label>
+                <input id="full-name" type="text" placeholder="dan chemmzy" />
+                <label for="email">email address</label>
+                <input id="email" type="email" placeholder="email@gmail.com" />
+                <button class="btn">sign up now</button>
+
+                <label id="select-where">Where did you hear about us</label>
+                <select id="select-where">
+                  <option value="Friends">Friends and Family</option>
+                  <option value="YouTube">YouTube</option>
+                  <option value="Podcast">Podcast</option>
+                  <option value="Facebook Ads">Facebook Ads</option>
+                  <option value="others">
+                   Others
+                  </option>
+                </select>
+              </form>
+            </div>
+            <div
+              class="cta-image-box"
+              role="img"
+              aria="woman eating a delicious food"
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
