--- a/qoute.html
+++ b/qoute.html
@@ -60,17 +60,19 @@
       }
       .acc-container {
         background-color: red;
-        width: 15rem;
+        height: 2.3rem;
+        width: 17rem;
         border-radius: 10px;
         position: absolute;
-        right: 60%;
-        top: 60%;
+        right: 65%;
+        top: 58.7%;
       }
 
       .quote-acc {
         font-size: 1.4rem;
         font-weight: 700;
         padding: 4px;
+        margin-left: 0.8rem;
       }
     </style>
   </head>
@@ -88,19 +90,17 @@
       </div>
       <div class="qoute-container">
         <p>
-          I hear sey many men heart don fry for nigeria while some dey heat like
-          Mercury
+          wether you are going to your boyfriends house, you need urgent cash,
+          you never chop this morning, just bring billing to me.
         </p>
-        <!--
 
-  <img
-  src="c:\Users\Chiemela\Pictures\IMG_E4346.JPG"
-  class="qoute-img"
-  alt="qoute img"
-  height="300"
-  width="420"
-  />
--->
+        <video
+          src="c:\Users\Chiemela\Pictures\NPRG5049.MP4"
+          class="qoute-img"
+          alt="qoute img"
+          height="300"
+          width="420"
+        />
       </div>
       <div class="acc-container">
         <p class="quote-acc">IG.@CHEMMZY-BOY</p>
