--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>MainOmnifood</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img
           src="c:\Users\Chiemela\Pictures\omnifood-logo (1).png"
