--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>MainOmnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img
           src="c:\Users\Chiemela\Pictures\omnifood-logo (1).png"
@@ -580,7 +580,7 @@
             <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
             <p class="feature-title">Pause anytime</p>
             <p class="feature-text">
-              Going on vacatios? just pause your subscription, and we refund
+              Going on vacations? just pause your subscription, and we refund
               unused days
             </p>
           </div>
