Introducing javaScript to my omnifood website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="./index.js"></script>
+    <script defer src="./index.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -674,7 +674,8 @@
             </li>
           </ul>
           <p class="copyright">
-            copyright &copy; 2030 by omnifood, inc. All right reserved
+            copyright &copy; <span class="year"> 2030 </span> by omnifood, inc.
+            All right reserved
           </p>
         </div>
         <div class="address-col">
