Update my league table UI

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <script defer src="./index.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered subscription that will make you eat healthy again, 365 days per year, it's tailored to your personal taste and nutritional needs"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      href="https://th.bing.com/th?id=OIP.j9dPdYrXBMOujnBEDOjEEQAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://th.bing.com/th?id=OIP.j9dPdYrXBMOujnBEDOjEEQAAAA&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2"
     />
     <link href="style.css" rel="stylesheet" />
     <link href="resp.css" rel="stylesheet" />
@@ -25,7 +37,7 @@
       defer
       scr="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
-    <title>MainOmnifood</title>
+    <title>Omnifood &mdash;never go hungry again</title>
   </head>
   <body>
     <header class="header">
